--- a/contact.html
+++ b/contact.html
@@ -1,72 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-Hans">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>嫩芽健康 | 联络我们</title>
-  <link rel="stylesheet" href="./styles.css?v=20241217-1">
-</head>
-<body>
-  <header>
-    <div class="topbar">
-      <div class="brand">NENYA HEALTH</div>
-      <nav>
-        <a href="./index.html" data-i18n="navHome">首页</a>
-        <a href="./services.html" data-i18n="navServices">服务</a>
-        <a href="./about.html" data-i18n="navAbout">关于</a>
-      </nav>
-      <div class="actions">
-        <div class="lang-switch">
-          <button data-lang="zh" class="active">ZH</button>
-          <button data-lang="yue">粵</button>
-          <button data-lang="en">EN</button>
-        </div>
-        <a class="btn-primary" href="./contact.html" data-i18n="contactButton">联络我们</a>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Redirecting…</title>
+    <meta http-equiv="refresh" content="0;url=./about.html#contact">
+    <link rel="stylesheet" href="./styles.css?v=20251218-1">
+    <script>location.replace('./about.html#contact')</script>
+  </head>
+  <body>
+    <main style="display:flex;min-height:100vh;align-items:center;justify-content:center;font-family:Inter,Arial,sans-serif">
+      <div style="text-align:center;color:#4a5b71">
+        <p>页面已迁移，正在跳转到关于页的联络区…</p>
+        <p><a href="./about.html#contact">若未自动跳转，请点此继续</a></p>
       </div>
-    </div>
-  </header>
-
-  <main>
-    <section class="hero" style="background-image: linear-gradient(120deg, rgba(234, 242, 255, 0.95), rgba(214, 228, 255, 0.85)), url('./assets/bg-hero.svg');">
-      <div class="hero-content">
-        <h1 data-i18n="contactPageTitle">联络与预约</h1>
-        <p data-i18n="contactPageDesc">提供深圳 / 香港 / 跨境陪伴。所有沟通在合规框架内进行，保持私密与留痕。</p>
-      </div>
-    </section>
-
-    <section class="section alt">
-      <div class="contact-layout">
-        <div class="contact-card">
-          <h3 data-i18n="contactEmailLabel">邮箱</h3>
-          <p class="muted">hello@nenya.health</p>
-          <p class="muted" data-i18n="contactRegions">服务地区：深圳 · 香港 · 跨境</p>
-          <div class="copy-row">
-            <span>hello@nenya.health</span>
-            <button data-copy="hello@nenya.health" data-copied-label="Copied" data-i18n="contactCopy">复制邮箱</button>
-          </div>
-          <p class="disclaimer" data-i18n="contactDisclaimer">免责声明：嫩芽健康提供健康管理与协调服务，不替代诊断、不承诺疗效；医疗决策需由执业医生与客户共同确认。</p>
-        </div>
-        <div class="qr-panel">
-          <img src="./assets/qrcode.png" alt="二维码" />
-          <p class="muted" data-i18n="contactStripTitle">扫码添加「嫩芽健康」｜预约私密沟通</p>
-        </div>
-      </div>
-    </section>
-
-    <div class="contact-strip">
-      <div>
-        <h3 data-i18n="contactStripTitle">扫码添加「嫩芽健康」｜预约私密沟通</h3>
-        <p class="meta" data-i18n="contactStripDesc">联络入口始终开放，所有沟通以隐私与合规为前提。</p>
-      </div>
-      <div class="contact-strip-actions">
-        <a class="btn-primary" href="./contact.html" data-i18n="contactStripCTA">前往联系页</a>
-      </div>
-      <div class="qrcode">
-        <img src="./assets/qrcode.png" alt="二维码" />
-      </div>
-    </div>
-  </main>
-
-  <script src="./script.js?v=20241217-1"></script>
-</body>
+    </main>
+  </body>
 </html>
