--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>嫩芽健康 | 深港跨境医疗与家庭健康管理</title>
-  <link rel="stylesheet" href="./styles.css?v=20241217-1">
+  <meta name="description" content="嫩芽健康 — 深港跨境医疗与家庭健康管理顾问。专业方法、长期视角与多语沟通，为高净值家庭提供稳健方案。">
+  <meta property="og:title" content="嫩芽健康 | 深港跨境医疗与家庭健康管理">
+  <meta property="og:description" content="深港跨境医疗与家庭健康管理顾问 — 私密、专业、可执行的健康路径服务。">
+  <meta property="og:image" content="/assets/logo-nenya.svg">
+  <link rel="stylesheet" href="./styles.css?v=20251218-1">
 </head>
 <body>
   <header>
     <div class="topbar">
-      <div class="brand">NENYA HEALTH</div>
+      <div class="brand"><img src="./assets/logo-nenya.svg" alt="NENYA HEALTH" class="logo" /></div>
       <nav>
         <a href="./index.html" class="active" data-i18n="navHome">首页</a>
         <a href="./services.html" data-i18n="navServices">服务</a>
@@ -21,7 +25,7 @@
           <button data-lang="yue">粵</button>
           <button data-lang="en">EN</button>
         </div>
-        <a class="btn-primary" href="./contact.html" data-i18n="contactButton">联络我们</a>
+        <a class="btn-primary" href="./about.html#contact" data-i18n="contactButton">联络我们</a>
       </div>
     </div>
   </header>
@@ -33,7 +37,7 @@
         <p data-i18n="heroSubtitle">以专业健康管理师的视角，梳理资料、验证选项、联动深港资源，让决策更清晰、执行更有序。</p>
         <div class="hero-actions">
           <a class="btn-secondary" href="./services.html" data-i18n="heroCTAService">查看服务</a>
-          <a class="btn-primary" href="./contact.html" data-i18n="heroCTAContact">联络我们</a>
+          <a class="btn-primary" href="./about.html#contact" data-i18n="heroCTAContact">联络我们</a>
         </div>
       </div>
     </section>
@@ -105,20 +109,20 @@
       </div>
     </section>
 
-    <div class="contact-strip">
+      <div class="contact-strip">
       <div>
         <h3 data-i18n="contactStripTitle">扫码添加「嫩芽健康」｜预约私密沟通</h3>
         <p class="meta" data-i18n="contactStripDesc">联络入口始终开放，所有沟通以隐私与合规为前提。</p>
       </div>
       <div class="contact-strip-actions">
-        <a class="btn-primary" href="./contact.html" data-i18n="contactStripCTA">前往联系页</a>
+        <a class="btn-primary" href="./about.html#contact" data-i18n="contactStripCTA">前往联系页</a>
       </div>
       <div class="qrcode">
-        <img src="./assets/qrcode.png" alt="二维码" />
+        <img src="./assets/qrcode.svg" alt="二维码" />
       </div>
     </div>
   </main>
 
-  <script src="./script.js?v=20241217-1"></script>
+  <script src="./script.js?v=20251218-1"></script>
 </body>
 </html>
