--- a/services.html
+++ b/services.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>嫩芽健康 | Concierge 服务菜单</title>
-  <link rel="stylesheet" href="./styles.css?v=20241217-1">
+  <meta name="description" content="嫩芽健康 Concierge 服务｜跨境健康管理组合。定制化服务，私密沟通确认细节。">
+  <meta property="og:title" content="嫩芽健康 | Concierge 服务菜单">
+  <meta property="og:description" content="定制服务套件：路径、跨境礼宾、专家协调、体检管理、报告整理、年度守护。">
+  <link rel="stylesheet" href="./styles.css?v=20251218-1">
 </head>
 <body>
   <header>
     <div class="topbar">
-      <div class="brand">NENYA HEALTH</div>
+      <div class="brand"><img src="./assets/logo-nenya.svg" alt="NENYA HEALTH" class="logo" /></div>
       <nav>
         <a href="./index.html" data-i18n="navHome">首页</a>
         <a href="./services.html" class="active" data-i18n="navServices">服务</a>
@@ -21,7 +24,7 @@
           <button data-lang="yue">粵</button>
           <button data-lang="en">EN</button>
         </div>
-        <a class="btn-primary" href="./contact.html" data-i18n="contactButton">联络我们</a>
+        <a class="btn-primary" href="./about.html#contact" data-i18n="contactButton">联络我们</a>
       </div>
     </div>
   </header>
@@ -33,7 +36,7 @@
         <h1 data-i18n="servicesHeroTitle">Concierge Menu｜跨境健康管理组合</h1>
         <div class="hero-actions">
           <a class="btn-secondary" href="./about.html" data-i18n="navAbout">关于</a>
-          <a class="btn-primary" href="./contact.html" data-i18n="contactButton">联络我们</a>
+          <a class="btn-primary" href="./about.html#contact" data-i18n="contactButton">联络我们</a>
         </div>
       </div>
     </section>
@@ -104,14 +107,14 @@
         <p class="meta" data-i18n="contactStripDesc">联络入口始终开放，所有沟通以隐私与合规为前提。</p>
       </div>
       <div class="contact-strip-actions">
-        <a class="btn-primary" href="./contact.html" data-i18n="contactStripCTA">前往联系页</a>
+        <a class="btn-primary" href="./about.html#contact" data-i18n="contactStripCTA">前往联系页</a>
       </div>
       <div class="qrcode">
-        <img src="./assets/qrcode.png" alt="二维码" />
+        <img src="./assets/qrcode.svg" alt="二维码" />
       </div>
     </div>
   </main>
 
-  <script src="./script.js?v=20241217-1"></script>
+  <script src="./script.js?v=20251218-1"></script>
 </body>
 </html>
